# dvl-photo-validator

./: .gitignore  pyproject.toml  readme.md
dvlpv/: __init__.py  main.py
dvlpv/utils/: exceptions.py  settings.py  types.py
