[tool.poetry]
name = "dvl-photo-validator"
version = "0.1.0"
description = "A python library for checking and modifying your photo for eligibility for the green card lottery"
authors = ["Pavel Anokhin <p.a.anokhin@gmail.com>"]
readme = "README.md"
packages = [{include = "dvlpv"}]

[tool.poetry.dependencies]
python = "^3.11"
dlib = "^19.24.1"
pillow = "^9.5.0"
numpy = "^1.24.3"
opencv-python = "^4.7.0.72"
exifread = "^3.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
